[ephemeralForTest] TemporaryKVRecordStore fails to register commit handler in WCE loop

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.0.2, 5.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • ALL
    • v5.0
    • Execution Team 2021-07-26
    • 20
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In SERVER-57231, we updated the finalization logic in TemporaryKVRecordStore so that the finalization flag is updated in a commit handler when we are running within a WriteConflictException retry loop with an active WriteUnitOfWork.

      However, the RecoveryUnit in a ephemeralForTest storage engine never returns true for the RecoveryUnit::isActive() function. The implementation transitions the internal state to kInactiveInUnitOfWork but never makes to Active. Most of the server code that queries the active state only cares about !isActive() so this is generally not an issue for test deployments using the ephemeralForTest storage engine.

      The impact of this defect is limited to server instances running the non-production ephemeralForTest storage engine.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: