SERVER-58357 transition EFT RecoveryUnit state to active when there are pending modifications

Previously, we would leave the EFT RecoveryUnit in an inactive-but-in-UOW state which
still allows us to commit and rollback the WriteUnitOfWork successfully. However, for
code that has conditional logic based on checking RecoveryUnit::isActive(), this may
result in behavior that would deviate from a server running with the WiredTiger storage
engine.